--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
 <div class="container">
     <h2>Registration Form with PFHa Validation</h2>
-    <form id="registration-form" action="process_registration.php" method="post" enctype="multipart/form-data">
+action="https://formspree.io/f/mgvwnnog"
+  method="POST"
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
