--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
 
 <div class="container">
     <h2>Registration Form with PFHa Validation</h2>
-action="https://formspree.io/f/mgvwnnog"
+    
+    
+<form
+  action="https://formspree.io/f/mgvwnnog"
   method="POST"
+>
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
@@ -128,6 +132,7 @@ action="https://formspree.io/f/mgvwnnog"
         <div class="error" id="error-message"></div>
     </form>
 </div>
+
 
 <script>
     document.getElementById("registration-form").addEventListener("submit", function (event) {
