--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
-<form action="https://formsubmit.co/spickhajuha@gmail.com" method="POST">
-     <input type="text" name="name" required>
-     <input type="email" name="email" required>
-     <button type="submit">Send</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FormSubmit Redirect Example</title>
+</head>
+<body>
+  <h1>हमसे संपर्क करें</h1>
+  <form action="https://formsubmit.co/your-email@example.com" method="POST" enctype="multipart/form-data">
+    <!-- नाम -->
+    <label for="name">नाम:</label><br>
+    <input type="text" id="name" name="name" placeholder="अपना नाम लिखें" required><br><br>
+
+    <!-- ईमेल -->
+    <label for="email">ईमेल:</label><br>
+    <input type="email" id="email" name="email" placeholder="अपना ईमेल लिखें" required><br><br>
+
+    <!-- संदेश -->
+    <label for="message">संदेश:</label><br>
+    <textarea id="message" name="message" rows="5" placeholder="अपना संदेश लिखें..." required></textarea><br><br>
+
+    <!-- फाइल अपलोड -->
+    <label for="file">फाइल अपलोड करें:</label><br>
+    <input type="file" id="file" name="file"><br><br>
+
+    <!-- Redirect URL -->
+    <input type="hidden" name="_next" value="https://upmsp.edu.in">
+
+    <!-- सबमिट बटन -->
+    <button type="submit">सबमिट करें</button>
+  </form>
+</body>
+</html>
