--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>हमसे संपर्क करें</h1>
-  <form action="https://formsubmit.co/shiva17072008@gmail.com" method="POST" enctype="multipart/form-data">
+  <form action="process_registration.php" method="POST" enctype="multipart/form-data">
     <!-- नाम -->
     <label for="name">नाम:</label><br>
     <input type="text" id="name" name="name" placeholder="अपना नाम लिखें" required><br><br>
